# bot.hs

./: README.md  ga2bot.cabal  stack.yaml
src/: Bot.hs  Main.hs
src/Bot/: Bot.hs  Channel.hs  Command.hs  Dispatcher.hs  Types.hs
src/Bot/Channel/: Telegram.hs  Types.hs
src/Bot/Channel/Telegram/: Types.hs
src/Bot/Command/: Base.hs  Endpoints.hs  Feeder.hs  Route.hs  Telegram.hs  Types.hs  Youtube.hs
src/Bot/Command/Base/: Types.hs
src/Bot/Command/Feeder/: Database.hs  Types.hs
src/Bot/Command/Feeder/Database/: Types.hs
src/Bot/Command/Telegram/: Types.hs
src/Bot/Command/Youtube/: Types.hs
