name:                ga2bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ga2bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ga2bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:   Bot
                 , Bot.Command
                 , Bot.Command.Base
                 , Bot.Command.Base.Types
                 , Bot.Command.Feeder
                 , Bot.Command.Feeder.Database
                 , Bot.Command.Feeder.Database.Types
                 , Bot.Command.Feeder.Types
                 , Bot.Command.Types
                 , Bot.Command.Youtube
                 , Bot.Command.Youtube.Types
                 , Bot.Types
  build-depends:       base >= 4.7 && < 5
                     , free >= 4.12
                     , monad-loops >= 0.4
                     , natural-transformation >= 0.4
                     , comonad
                     , telegram-api
                     , servant-client
                     , mtl
                     , transformers
                     , stm
                     , http-client
                     , http-client-tls
                     , stm-containers
                     , text
                     , hedis
                     , feed >= 1.0
                     , bytestring
                     , exceptions
                     , network-uri
                     , http-types
                     , case-insensitive
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , esqueleto
                     , resource-pool
                     , time
                     , monad-logger
                     , monad-control
                     , transformers-base
                     , fast-logger
                     , monoid-subclasses
                     , array
                     , regex-base
                     , regex
                     , regex-with-pcre
                     , typed-process
                     , uuid
                     , directory
                     , filepath
